--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 @import"../node_modules/font-awesome/css/font-awesome.css";
 @import"../node_modules/primeng/resources/primeng.css";
 @import"../node_modules/roboto-fontface/css/roboto/roboto-fontface.css";
+@import"./assets/css/prime-ng-overrides.css";
 html{
     font-family: 'Roboto', sans-serif;
     background-color: #EAEDF1;
