Asset Tab details Added

--- a/src/app/search-panel/search-panel.component.html
+++ b/src/app/search-panel/search-panel.component.html
@@ -1,13 +1,13 @@
 <vertical-split-pane class="h-full-height" separator-thickness="16" primary-component-minsize="150" secondary-component-minsize="300" primary-component-initialratio="0.2"
   >
-  <div class="split-pane-content-primary">
-    <div class="left">
+  <div class="split-pane-content-primary  h-full-height">
+    
       <app-filter-panel></app-filter-panel>
-    </div>
+   
   </div>
-  <div class="split-pane-content-secondary">
-    <div class="right">
+  <div class="split-pane-content-secondary h-full-height">
+    
       <app-search-resultspanel></app-search-resultspanel>
-    </div>
+    
   </div>
 </vertical-split-pane>
