--- a/src/app/search-panel/search-resultspanel/asset-results/asset-results.component.html
+++ b/src/app/search-panel/search-resultspanel/asset-results/asset-results.component.html
@@ -1,4 +1,4 @@
-<p-dataTable [value]="data" scrollable="true" [(selection)]="selectedCars2" resizableColumns="true" [scrollHeight]="calcH()" [scrollWidth]="calcW()">
+<p-dataTable [value]="data" scrollable="true" resizableColumns="true" [scrollHeight]="calcH()" [scrollWidth]="calcW()">
     <p-column [style]="{'width':'38px'}" selectionMode="multiple"></p-column>
     <p-column field="Preview" header="Preview #" [sortable]="true" [style]="{'width':'100px'}"></p-column>
     <p-column field="Content Type" header="Content Type" [sortable]="true" [style]="{'width':'90px'}"></p-column>
